--- a/index.html
+++ b/index.html
@@ -424,8 +424,87 @@
                     </li>
                 </ul>
             </div>
+            <form class="subscribe-form">
+                <div class="subscribe-form-field-wrapper">
+                    <label class="subscribe-form-field-label" for="subscribe-email">Subscribe</label>
+                    <input class="subscribe-form-input" id="subscribe-email" name="subscribe-email" type="text" required
+                        placeholder="E-mail">
+                </div>
+                <div class="subscribe-form-field-btn">
+                    <button class="subscribe-form-submit-btn">Subscribe</button>
+                    <svg class="subscribe-form-submit-icon" width="24" height="24" aria-label="icon-send">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                </div>
+            </form>
         </div>
     </footer>
+
+    <!-- Backdrop -->
+    <div class="backdrop is-open">
+        <div class="modal">
+            <button class="modal-close-btn">
+                <svg class="madal-close-btn-icon" width="8" height="8" aria-label="close modal label">
+                    <use href="./images/icons.svg#icon-close">
+                    </use>
+                </svg>
+            </button>
+            <p class="review-form-description">Leave your contacts and we will call you back</p>
+            <form class="review-form">
+                <div class="review-form-field-wrapper">
+                    <label class="review-form-field-label" for="user-name">Name</label>
+                    <div class="review-form-input-wrapper">
+                        <input class="review-form-input" id="user-name" name="user-name" type="text"
+                            pattern="[a-zA-Zа-яА-ЯіІїЇєЄ']+" title="Olha" required />
+                        <svg class="review-form-input-icon" width="18" height="18" aria-label="icon-person">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="review-form-field-wrapper">
+                    <label class="review-form-field-label" for="user-tel">Phone</label>
+                    <div class="review-form-input-wrapper">
+                        <input class="review-form-input" id="user-tel" name="user-tel" type="tel"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" required />
+                        <svg class="review-form-input-icon" width="18" height="24" aria-label="icon-phone">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="review-form-field-wrapper">
+                    <label class="review-form-field-label" for="user-email">Email</label>
+                    <div class="review-form-input-wrapper">
+                        <input class="review-form-input" id="user-email" name="user-email" type="email" required />
+                        <svg class="review-form-input-icon" width="18" height="24" aria-label="icon-email">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="review-form-field-wrapper-comment">
+                    <label class="review-form-field-label" for="user-comment">Comment</label>
+                    <textarea class="review-form-comment" id="user-comment" name="user-comment"
+                        placeholder="Text input"></textarea>
+                </div>
+                <div class="review-form-checkbox-wrapper">
+                    <input class="review-form-checkbox visually-hidden" id="user-privacy-policy"
+                        name="user-privacy-policy" type="checkbox" value="true" required />
+                    <label class="review-form-checkbox-label" for="user-privacy-policy">
+                        <span class="review-form-own-checkbox">
+                            <svg class="review-form-own-checkbox-icon" width="16" height="16"
+                                aria-label="checkmark icon">
+                                <use href="./images/icons.svg#icon-click"></use>
+                            </svg>
+                        </span> I accept the terms and conditions of the
+                        <a href="" class="href"><span class="review-form-checbox-privacy">Privacy
+                                Policy</span></a>
+                    </label>
+                </div>
+                <button class="review-form-submit-btn" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
+
 </body>
 
 </html>
