cor2_footer+mod_w

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 <p class="subscribe-form-title">Subscribe</p>
                 <form class="subscribe-form">
                     <label class="subscribe-form-field-label">
-                        <input class="subscribe-form-input" name="subscribe-email" type="text" required
+                        <input class="subscribe-form-input" name="subscribe-email" type="email" required
                             placeholder="E-mail">
                     </label>
                     <button class="subscribe-form-submit-btn" type="submit">Subscribe
