--- a/index.html
+++ b/index.html
@@ -490,14 +490,14 @@
                     <input class="review-form-checkbox visually-hidden" id="user-privacy" name="user-privacy"
                         type="checkbox" value="true" required />
                     <label class="review-form-checkbox-label" for="user-privacy">
-                        <span class="review-form-own-checkbox">
+                        <span class="review-form-own-checkbox style-user-accept">
                             <svg class="review-form-own-checkbox-icon" width="10" height="8"
                                 aria-label="checkmark icon">
                                 <use href="./images/icons.svg#icon-click"></use>
                             </svg>
-                        </span> I accept the terms and conditions of the
-                        <a href="" class="href"><span class="review-form-checbox-privacy">Privacy
-                                Policy</span></a>
+                        </span>I accept the terms and conditions of the
+                        <a href="" class="href review-form-checbox-privacy">Privacy
+                            Policy</a>
                     </label>
                 </div>
                 <button class="review-form-submit-btn" type="submit">Send</button>
