--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     <input class="review-form-checkbox visually-hidden" id="user-privacy" name="user-privacy"
                         type="checkbox" value="true" required />
                     <label class="review-form-checkbox-label" for="user-privacy">
-                        <span class="review-form-own-checkbox style-user-accept">
+                        <span class="review-form-own-checkbox">
                             <svg class="review-form-own-checkbox-icon" width="10" height="8"
                                 aria-label="checkmark icon">
                                 <use href="./images/icons.svg#icon-click"></use>
